--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="h-dvh w-screen max-w-180 m-auto pt-3 sm:pt-3.5 sm:px-10"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
